[gd_scene load_steps=3 format=3 uid="uid://nijdgt7g6glq"]

[ext_resource type="Script" path="res://addons/noded/promo/promo.gd" id="1_kr1ag"]
[ext_resource type="Theme" uid="uid://b66pwk66dh8td" path="res://addons/noded/noded_theme.tres" id="1_p0gml"]

[node name="LaunchPromo" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_p0gml")
script = ExtResource("1_kr1ag")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Web site"

[node name="LineEdit" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "http://"

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Itch.io Page"

[node name="LineEdit2" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "http://"

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Steam Page"

[node name="LineEdit" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "http://"

[node name="HBoxContainer3" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer"]
layout_mode = 2
text = "Screenshots"

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"IndentPanel"

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0
vertical_scroll_mode = 2

[node name="ScreenShotsRoot" type="HFlowContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ScreeshotsFolderLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "D:/Screenshots"

[node name="AddScreenShotButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Pick"

[node name="VBoxContainer2" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer2"]
layout_mode = 2
text = "Launch Trailer"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer2"]
layout_mode = 2

[node name="TrailerPathLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "C:/My Videos/clip.mp4"
horizontal_alignment = 1

[node name="SelectTrailerClip" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Select"

[node name="ClearTrailerClip" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Clear"

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer2"]
layout_mode = 2
text = "Tags"

[node name="TextEdit" type="TextEdit" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "tags, go, here"

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/AddScreenShotButton" to="." method="add_screen_shot_folder"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer2/HBoxContainer/SelectTrailerClip" to="." method="select_trailer_file"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer2/HBoxContainer/ClearTrailerClip" to="." method="clear_trailer_path"]
